--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,6 +12,6 @@
 
   <p>Nous ne revendons ni ne partageons vos données avec des tiers.</p>
 
-  <p>Pour toute question concernant cette politique de confidentialité, vous pouvez nous contacter à l’adresse suivante : <strong>entraineur@baseballabco.onmicrosoft.com</strong>.</p>
+  <p>Pour toute questions concernant cette politique de confidentialité, vous pouvez nous contacter à l’adresse suivante : <strong>entraineur@baseballabco.onmicrosoft.com</strong>.</p>
 </body>
 </html>
